[package]
name = "send_all"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"
iota-sdk = { version = "1.1.1", features = ["private_key_secret_manager"] }
tokio = { version = "1", features = ["full"] }
