[package]
name = "timed_balance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"
iota-sdk = { version = "1.1", features = ["private_key_secret_manager"] }
reqwest = "0.11"
serde = "1.0"
tabled = "0.14"
tokio = { version = "1", features = ["full"] }
